// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubTitle should render 1`] = `
<small
  className="theme-tc-subheader-details-text-subtitle tc-subheader-details-text-subtitle"
>
  mySubTitle
</small>
`;

exports[`SubTitle should render in loading mode 1`] = `
<withI18nextTranslation(Skeleton)
  className="theme-tc-subheader-details-loading-subtitle tc-subheader-details-loading-subtitle"
  size="large"
  type="text"
/>
`;

exports[`TitleSubHeader should render 1`] = `
<div
  className="theme-tc-subheader-details tc-subheader-details"
>
  <Icon
    className="theme-tc-subheader-details-icon tc-subheader-details-icon"
    name="myIconId"
  />
  <div
    className="theme-tc-subheader-details-text tc-subheader-details-text"
  >
    <div
      className="theme-tc-subheader-details-text-title tc-subheader-details-text-title"
    >
      <TooltipTrigger
        label="myTitle"
        tooltipPlacement="bottom"
      >
        <h1
          className="theme-tc-subheader-details-text-title-wording tc-subheader-details-text-title-wording"
        >
          myTitle
        </h1>
      </TooltipTrigger>
    </div>
    <SubTitle
      t={[Function]}
    />
  </div>
</div>
`;

exports[`TitleSubHeader should render 2`] = `
<div
  className="theme-tc-subheader-details tc-subheader-details"
>
  <div
    className="theme-tc-subheader-details-text tc-subheader-details-text"
  >
    <div
      className="theme-tc-subheader-details-text-title tc-subheader-details-text-title"
    >
      <TooltipTrigger
        label="myTitle"
        tooltipPlacement="bottom"
      >
        <h1
          className="theme-tc-subheader-details-text-title-wording tc-subheader-details-text-title-wording"
        >
          myTitle
        </h1>
      </TooltipTrigger>
    </div>
    <SubTitle
      subTitle="mySubTitle"
      t={[Function]}
    />
  </div>
</div>
`;
